fixed sorting for get working hours
